update about Jady

--- a/about.Rmd
+++ b/about.Rmd
@@ -5,9 +5,9 @@ output: html_document
 
 <br></br>
 
-# <a href=""><img class="cat_circle" src="image/wine_words.jpg"></a><span style="padding-left:25px">Tianheng (Jady) Hu
+# <a href=""><img class="cat_circle" src="image/jady.jpg"></a><span style="padding-left:25px">Tianheng (Jady) Hu
  
-I'm Jady, a second year MPH student in Biostatistics at Columbia University Mailman School of Public Health. My professional interests include data science, clinical trial methodology and health policy management. My favorite wine is called Josh and wine type is rose.
+I'm Jady, a second year MPH student in Biostatistics at Columbia University Mailman School of Public Health. I received my BS in Statistics and Economics from Boston University. My professional interests include data science and clinical trial methodology. My favorite wine is called Josh and wine type is rose.
 
 <br></br>
 
